# umbra

./: .gitignore  README.md  config.example.yaml  config.yaml  docs.md  pyproject.toml  setup.py
docs/assets/quick_start/: image_scale_and_run.mkv  select_folder.mkv  select_reference_and_anchor.mkv
umbra/common/: bayer.py  context.py  convert.py  coords.py  disk.py  display.py  filters.py  fits.py  imageio.py  interpolation.py  polar.py  terminal.py  trackers.py  transform.py  typing.py
umbra/common/imageio/: __init__.py  _facade.py  extensions.py  metadata.py  read.py
umbra/common/imageio/_backends/: bitmap.py  exif.py  fits.py  raw.py
umbra/common/pyx/: lut.py
umbra/conversion/: __init__.py  calibration.py  header.py  image_to_fits.py
umbra/hdr/: hdr.py
umbra/integration/: __init__.py  benchmark.py  integration.py  io.py  memory.py  pipeline.py  reduce.py  rejection.py
umbra/registration/: __init__.py  auto.py  moon.py  objective.py  optim.py  pipeline.py  sun.py
umbra/scripts/: conversion.py  filters.py  integration.py  integration_test.py  merge_sun_moon.py  moon_hdr_composition.py  moon_integration.py  registration.py  sun_hdr_composition.py  sun_integration.py  test.py
