[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "umbra"
version = "0.0.0"

dependencies = [
    "astropy==7.0.1",
    "numpy==2.2.4",
    "opencv-python==4.11.0.86",
    "scikit-image==0.25.2",
    "scipy==1.15.2",
    "python-dateutil==2.9.0.post0",
    "psutil==7.1.0",
]